# ivygate

./: package.json  readme.md  test.cpp  tsconfig.json  webpack.config.js
i18n/: creationLabels.ts  docs.generated.ts  generate.ts  merge.awk  sensorLabels.ts  tr.py
i18n/po/: de-DE.po  en-UK.po  es-ES.po  es-MX.po  ja-JP.po  pt-BR.po  pt-PT.po  sv-SE.po  tl-PH.po  zh-CN.po  zh-TW.po
server/: Cargo.toml
server/src/: fs.rs  main.rs  proto.rs  test.rs
server/src/backing/: aws.rs  mod.rs  simple.rs
server/src/inc/: mod.rs
server/src/inc/clang/: inst.rs  mod.rs
src/: FileUploader.tsx  Ivygate.tsx  IvygateFileExplorer.tsx  Message.ts  MotorServoSensorDisplay.tsx  ProjectUploader.tsx  UserUploader.tsx  c-indent.ts  i18n.ts  index.html  index.tsx  message.ts  server.ts  style.ts  testStyled.tsx  theme.ts
src/components/: BooleanPlot.tsx  ComboBox.tsx  Dialog.tsx  DynamicGauge.tsx  Fa.tsx  FontAwesome.tsx  MiniComboBox.tsx  ResizeListener.ts  ResizeableComboBox.tsx  SensorPlot.tsx  SensorWidget.tsx  Text.tsx
src/components/Tours/: TourTarget.tsx
src/components/constants/: theme.ts
src/components/documentation/: DocumentationRoot.tsx  DocumentationWindow.tsx  EnumerationBrief.tsx  FileBrief.tsx  FileDocumentation.tsx  FunctionBrief.tsx  FunctionDocumentation.tsx  FunctionPrototype.tsx  ModuleBrief.tsx  StructureBrief.tsx  (+3 more)
src/state/: index.ts
src/types/: classroomTypes.ts  creationTypes.ts  fileInfo.ts  globals.d.ts  motorServoSensorTypes.ts  programmingLanguage.ts  project.ts  settings.ts  user.ts
src/util/: Color.ts  GlobalEvents.ts  geometry.ts  math.ts
(+10 files in other folders)
